# c-http-server

./: .gitmodules  CMakeLists.txt  config.json
include/: arena.h  config.h  file.h  http.h  main.h  route.h  tcp.h  worker.h
src/: arena.c  config.c  file.c  http.c  main.c  route.c  tcp.c  worker.c
test/: response.c
www/: 404.html  index.html
